# hubfetch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gh_scrap.py  ghfetch.sh  hubfetch.spec  main.py  pyproject.toml  shell.py  web_scrapper.py
.github/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml
contrib/aur/: PKGBUILD
contrib/homebrew/: homebrew.rb
contrib/nix/: package.nix
contrib/scoop/: hubfetch.json
ghfetch/: __init__.py  api.py  auth.py  cache.py  cli.py  config.py  display.py
hubfetch/: __init__.py  api.py  auth.py  cache.py  cli.py  config.py  display.py
