[project]
name = "ghfetch"
version = "0.1.0"
description = "A CLI ricing tool designed to fetch GitHub user stats"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "pygments>=2.19.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "urllib3>=2.6.3",
]
