[project]
name = "ghfetch"
version = "1.0.0"
description = "A CLI ricing tool designed to fetch GitHub user stats"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "pillow>=12.1.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
]

[project.scripts]
ghfetch = "ghfetch.cli:cli"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "ruff>=0.15.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
